--- a/Bonita/app/src/main/res/drawable/border_radius.xml
+++ b/Bonita/app/src/main/res/drawable/border_radius.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape>
-            <solid android:color="@color/white"/>
-            <corners android:radius="200dp"/>
-        </shape>
-    </item>
+<item>
+    <shape>
+        <solid android:color="@color/white"/>
+        <corners android:radius="200dp"/>
+        <stroke
+            android:width="1dp"
+            android:color="#d9d9d9"/>
+    </shape>
+</item>
 </selector>
