--- a/Bonita/app/src/main/res/layout/deadline_layout.xml
+++ b/Bonita/app/src/main/res/layout/deadline_layout.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="270dp"
+    android:orientation="vertical"
+    android:layout_marginLeft="15dp"
+    android:background="@drawable/border_radius_deadline">
 
     <androidx.cardview.widget.CardView
         android:layout_width="550px"
         android:layout_height="309px"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="5dp"
         app:cardCornerRadius="5dp">
 
         <ImageView
@@ -18,5 +18,84 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY"
             android:src="@drawable/top8"/>
+
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_marginTop="7dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_tag_red" />
+
+        <TextView
+            android:id="@+id/txtDiscount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="-50%"
+            android:textColor="@color/red"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txtName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="YORO JOLIES : Toàn dịch vụ"
+        android:textColor="@color/text_top"
+        android:textSize="30px"
+        android:textStyle="bold"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="10dp">
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_five_star"
+            android:layout_marginTop="-10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:text="."
+            android:textColor="#8c8c8c"
+            android:textSize="40px" />
+
+        <TextView
+            android:id="@+id/txtNumberOder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="1111 lượt đặt"
+            android:textColor="#8c8c8c"
+            android:layout_marginTop="4dp"
+            android:textSize="25px"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txtAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="15 đường D5, phường 25, Bình Thạnh, TP.HCM"
+        android:textColor="#8c8c8c"
+        android:layout_marginTop="-15dp"
+        android:textSize="23px"
+        android:textStyle="bold"
+        android:layout_marginLeft="10dp"/>
 </LinearLayout>
