[ThuyVTK] women service

--- a/Bonita/app/src/main/res/layout/activity_women_service.xml
+++ b/Bonita/app/src/main/res/layout/activity_women_service.xml
@@ -11,7 +11,7 @@
         android:id="@+id/search_bar_main"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/gradient_white_dark"
+        android:background="@color/main"
         android:orientation="horizontal">
         <!--search bar-->
         <LinearLayout
@@ -19,15 +19,15 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="7dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_pre"
-                android:layout_marginTop="3dp"/>
+                android:layout_marginTop="3dp"
+                android:src="@drawable/ic_pre" />
         </LinearLayout>
 
         <LinearLayout
@@ -67,7 +67,7 @@
                 android:layout_marginLeft="7dp"
                 android:text="Tóc nữ"
                 android:textColor="@color/text_search_women"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
         <!--notification-->
@@ -78,53 +78,150 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:src="@drawable/ic_filter" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="Lọc"
-            android:textColor="@color/text_search_women"/>
+            android:textColor="@color/text_search_women" />
 
     </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <ScrollView
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2">
+        android:layout_marginLeft="15dp">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!--top location-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
-                android:text="ĐỊA ĐIỂM UY TÍN"
-                android:textColor="@color/text"
-                android:textSize="18dp"
-                android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:layout_weight="2">
 
             <LinearLayout
-                android:layout_width="60dp"
-                android:layout_height="2dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/line" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvTopLocation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <!--top location-->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-    </ScrollView>
+                    android:layout_marginTop="10dp"
+                    android:text="ĐỊA ĐIỂM UY TÍN"
+                    android:textColor="@color/text"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="3dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/line" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvTopLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp" />
+
+                <!--All-->
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:text="TẤT CẢ DÀNH CHO BẠN"
+                    android:textColor="@color/text"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="60dp"
+                    android:layout_height="3dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/line" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/gradient_white_dark"
+                    android:orientation="horizontal"
+                    android:paddingTop="20dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_slide" />
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="none">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/btnNewest"
+                                style="@style/CustomTextAppearance"
+                                android:layout_width="90dp"
+                                android:layout_height="40dp"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/border_tab_radius_red"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="Mới nhất"
+                                android:textColor="@color/text"/>
+
+                            <TextView
+                                android:id="@+id/btnNearBy"
+                                style="@style/CustomTextAppearance"
+                                android:layout_width="90dp"
+                                android:layout_height="40dp"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/border_tab_radius_red"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="Gần tôi"
+                                android:textColor="@color/text"/>
+
+                            <TextView
+                                android:id="@+id/btnTrend"
+                                style="@style/CustomTextAppearance"
+                                android:layout_width="90dp"
+                                android:layout_height="40dp"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/border_tab_radius_red"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="Đặt nhiều"
+                                android:textColor="@color/text"/>
+
+                            <TextView
+                                android:id="@+id/btnSuperDiscount"
+                                style="@style/CustomTextAppearance"
+                                android:layout_width="90dp"
+                                android:layout_height="40dp"
+                                android:background="@drawable/border_tab_radius_red"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:text="Giảm sâu"
+                                android:textColor="@color/text"/>
+
+                        </LinearLayout>
+
+                    </HorizontalScrollView>
+                </LinearLayout>
+
+
+                <FrameLayout
+                    android:id="@+id/fragment_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </ScrollView>
     </RelativeLayout>
 </LinearLayout>
