--- a/Bonita/app/src/main/res/values/styles.xml
+++ b/Bonita/app/src/main/res/values/styles.xml
@@ -14,6 +14,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--    tab order-->
+    <style name="TabOrderTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">22px</item>
+    </style>
+
+    <!--    lowercase-->
+    <style name="CustomTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 
 
 </resources>
