--- a/Bonita/app/src/main/res/layout/fragment_newest.xml
+++ b/Bonita/app/src/main/res/layout/fragment_newest.xml
@@ -5,10 +5,23 @@
     android:layout_height="match_parent"
     tools:context=".fragment.NewestFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Newest" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            </LinearLayout>
+        </ScrollView>
+    </RelativeLayout>
 </FrameLayout>
