--- a/Bonita/app/src/main/res/values/colors.xml
+++ b/Bonita/app/src/main/res/values/colors.xml
@@ -20,5 +20,7 @@
     <color name="line">#ff8a00</color>
     <color name="red">#cc0000</color>
     <color name="tab">#ff1a1a</color>
-
+    <color name="lightGrey">#D3D3D3</color>
+    <color name="title">#232F34</color>
+    <color name="button_green">#009432</color>
 </resources>
