--- a/Bonita/app/src/main/res/values/styles.xml
+++ b/Bonita/app/src/main/res/values/styles.xml
@@ -26,7 +26,11 @@
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
     </style>
-
+    <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/white</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:background">@color/white</item>
+    </style>
 
 
 </resources>
