--- a/Bonita/app/src/main/res/layout/activity_women_service.xml
+++ b/Bonita/app/src/main/res/layout/activity_women_service.xml
@@ -23,6 +23,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/btnBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -90,8 +91,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="15dp">
+        android:layout_height="match_parent">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -106,6 +106,7 @@
 
                 <!--nearby location-->
                 <LinearLayout
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -129,12 +130,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginLeft="15dp"
                     android:layout_width="60dp"
                     android:layout_height="3dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/line" />
 
                 <LinearLayout
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -163,6 +166,7 @@
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:layout_marginLeft="15dp"
                     android:id="@+id/rvNearby"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -172,6 +176,7 @@
                 <!--Brand-->
 
                 <TextView
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
@@ -181,12 +186,14 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:layout_marginLeft="15dp"
                     android:layout_width="60dp"
                     android:layout_height="3dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/line" />
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:layout_marginLeft="15dp"
                     android:id="@+id/rvBrandWomen"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -195,6 +202,7 @@
 
                 <!--top location-->
                 <LinearLayout
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
@@ -217,12 +225,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginLeft="15dp"
                     android:layout_width="60dp"
                     android:layout_height="3dp"
                     android:layout_marginTop="10dp"
                     android:background="@color/line" />
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:layout_marginLeft="15dp"
                     android:id="@+id/rvTopLocation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -231,6 +241,7 @@
                 <!--All-->
 
                 <TextView
+                    android:layout_marginLeft="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
@@ -240,6 +251,7 @@
                     android:textStyle="bold" />
 
                 <LinearLayout
+                    android:layout_marginLeft="15dp"
                     android:layout_width="60dp"
                     android:layout_height="3dp"
                     android:layout_marginTop="10dp"
@@ -316,11 +328,14 @@
                     </HorizontalScrollView>
                 </LinearLayout>
 
-
-                <FrameLayout
-                    android:id="@+id/fragment_container"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvAll"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"/>
+
 
             </LinearLayout>
 
