--- a/Bonita/app/src/main/res/layout/nav_header_main.xml
+++ b/Bonita/app/src/main/res/layout/nav_header_main.xml
@@ -12,19 +12,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/orange"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:paddingLeft="16dp"
         android:paddingTop="30dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp">
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:background="@drawable/border_cycle_white"
-            android:src="@drawable/ic_five_star" />
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/image_profile"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/avatar"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,10 +38,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="8dp"
+                android:paddingTop="2dp"
                 android:text="Xin Chào!"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/black" />
+                android:textColor="@color/text_top"
+                android:textSize="14dp"/>
 
             <TextView
                 android:id="@+id/textView"
@@ -47,7 +50,18 @@
                 android:layout_height="wrap_content"
                 android:text="Kim Thùy"
                 android:textColor="@color/black"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:layout_marginTop="5dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cập nhật >"
+                android:textColor="@color/line"
+                android:textSize="16dp"
+                android:layout_marginTop="5dp"/>
+
 
         </LinearLayout>
 
@@ -91,7 +105,7 @@
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="@color/red"
+        android:background="@drawable/border_button"
         android:orientation="horizontal"
         android:textColor="@color/white">
 
@@ -99,15 +113,17 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
-            android:src="@drawable/ic_tag" />
+            android:src="@drawable/logout"
+            />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
             android:text="ĐĂNG XUẤT"
             android:textColor="@color/white"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="35dp"
+            android:gravity="center_vertical"/>
     </LinearLayout>
 </LinearLayout>
